# comfyui_voicebridge

./: LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
example_workflows/: VoiceBridge_Example_Workflow.json  VoiceBridge_Example_Workflow_V3_1.json
src/comfyui_voicebridge/: model_utils.py  nodes.py  srt_utils.py
tests/: __init__.py  test_comfyui_voicebridge.py
web/js/: uploadSRT.js
